# job-hunter

./: .gitignore  pyproject.toml
app/: main.py
app/core/configs/: ai_prompts.py  settings.py
app/models/: ProcessedJobs.py  Resumes.py  Shortlists.py
app/routers/: resumes.py
app/schemas/: resumes_request.py
app/services/: ai_communicator.py  resumes_service.py
