[project]
name = "job-hunter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.3",
    "beanie>=2.1.0",
    "fastapi>=0.139.2",
    "google-genai>=2.14.0",
    "motor>=3.7.1",
    "pdfplumber>=0.11.10",
    "pydantic-settings>=2.14.2",
    "pymongo>=4.17.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.51.0",
]
